--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,16 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.21.2",
-      "mongodb": "^6.13.0",
-      "dotenv": "^16.3.1"
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "mongodb": "^6.13.0"
     },
     "devDependencies": {
-      "nodemon": "^3.1.0"
+        "nodemon": "^3.1.0"
     }
-  }
-  
+}
