--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "mathjs": "^14.2.1",
         "mongodb": "^6.13.0"
     },
     "devDependencies": {
