--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/accessibility": "^3.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "mathjs": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
